HTML learning folder updated

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
         <title>Rex's Website</title>
     </head>
 
-    <body>
+    <body style="background-color:#7FFFD4">
         <h1>Rex's Website</h1> <!-- header h1 to h6 -->
         
         <hr/> <!-- horizontal line -->
@@ -19,6 +19,23 @@
         <p><big>Hello</big> <small>visitor</small>!</p>
         <p>Water is H<sub>2</sub>O.</p>
         <p>10 to the power of 2 is 10<sup>2</sup>.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <h2>Color and Style</h2>
+        <p style="color:blue;background-color:red;"> You can style the HTML with style= </p>  <!-- use color name or hex -->
     </body>
 
 </html>
