--- a/Full-Stack/HTML_LV1/basics.html
+++ b/Full-Stack/HTML_LV1/basics.html
@@ -6,5 +6,12 @@
   </head>
   <body>
     <a href = "newpage.html">Click me</a>
+    <h1>log in</h1>
+    <h1>Please input the email and password</h1>
+
+    <form>
+      <input  type= "email" name = "user email" value = "email here">
+      <input type = "submit" name = "" value = "Submit">
+    </form>
   </body>
 </html>
