--- a/Full-Stack/HTML_LV1/basics.html
+++ b/Full-Stack/HTML_LV1/basics.html
@@ -10,8 +10,18 @@
     <h1>Please input the email and password</h1>
 
     <form>
-      <input  type= "email" name = "user email" value = "email here">
+      <label>
+        Enter Email:
+        <input  type= "email" name = "useremail" value = "email here">
+      </label>
       <input type = "submit" name = "" value = "Submit">
     </form>
+    <form>
+
+      <label for = "email">Enter Email:</label>
+<input  type= "email" name = "email" value = "email here">
+    </form>
+
+
   </body>
 </html>
