--- a/Full-Stack/HTML_LV1/newpage.html
+++ b/Full-Stack/HTML_LV1/newpage.html
@@ -6,5 +6,29 @@
   </head>
   <body>
     <img src="a.png"alt="Hi ur trapped">
+
+
+
+    <h1>Hotel Feedback Form</h1>
+    <form>
+      <h2> Are you from inside the US or outside the US?</h2>
+
+      <label for ="inusa"> INSID: </label>
+      <input id= "inusa" type = "radio" name = "loc" value = "">
+
+      <label for ="outusa"> OUTSIDE: </label>
+      <input id= "outusa" type = "radio" name = "loc" value = "">
+
+      <h2>Rate your service:</h2>
+      <select name = "stars">
+        <option name= "Great">3</option>
+        <option name= "Okay">2</option>
+        <option name= "Bad">1</option>
+      </select>
+      <h2>Any Feedbacks?</h2>
+
+      <textarea name="name"rows="10" cols = "100" type = "text" placeholder="Feedbacks here"></textarea> 
+      <input type = "submit" value = "Submit">
+    </form>
   </body>
 </html>
